--- a/index.html
+++ b/index.html
@@ -94,7 +94,12 @@
         <div class="container">
             <h2 class="section-title">Featured Projects</h2>
             <div class="projects-grid">
-                
+                <img src="projects/Quran.png" alt="Quran Live Stream">
+                <div class="project-overlay">
+                    <h3>Quran Live Stream</h3>
+                    <p>Online Streaming of the Holy Quran Radio in Cairo</p>
+                    <a href="https://quranliveradio.up.railway.app/" class="project-link">View Website</a>
+                </div>
             </div>
         </div>
     </section>
@@ -139,7 +144,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <span class="logo-text">AC</span>
+                    <span class="logo-text">JS</span>
                     <span class="logo-subtext">Full Stack Developer</span>
                 </div>
                 <div class="footer-links">
