--- a/index.html
+++ b/index.html
@@ -94,11 +94,13 @@
         <div class="container">
             <h2 class="section-title">Featured Projects</h2>
             <div class="projects-grid">
-                <img src="projects/Quran.png" alt="Quran Live Stream">
-                <div class="project-overlay">
-                    <h3>Quran Live Stream</h3>
-                    <p>Online Streaming of the Holy Quran Radio in Cairo</p>
-                    <a href="https://quranliveradio.up.railway.app/" class="project-link">View Website</a>
+                <div class="project-item">
+                    <img src="projects/Quran.png" alt="Quran Live Stream">
+                    <div class="project-overlay">
+                        <h3>Quran Live Stream</h3>
+                        <p>Online Streaming of the Holy Quran Radio in Cairo</p>
+                        <a href="https://quranliveradio.up.railway.app/" class="project-link">View Website</a>
+                    </div>
                 </div>
             </div>
         </div>
