--- a/index.html
+++ b/index.html
@@ -103,6 +103,14 @@
                         <a href="https://quranliveradio.up.railway.app/" class="project-link">View Website</a>
                     </div>
                 </div>
+                <div class="project-item">
+                    <img src="projects/Youtube.png" alt="Youtube Interface">
+                    <div class="project-overlay">
+                        <h3>Youtube-Like Interface</h3>
+                        <p>YouTube interface task after HTML and CSS full course</p>
+                        <a href="https://joy-s-s.github.io/YouTube/" class="project-link">View Website</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
