--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="static/favicon.ico" type="image/x-icon">
+    <meta property="og:title" content="Joy Sayed - Portfolio">
+    <meta property="og:description" content="Welcome to my personal portfolio showcasing my projects and skills.">
+    <meta property="og:image" content="https://joy-s-s.github.io/JS_Portfolio/static/favicon.ico">
+    <meta property="og:url" content="https://joy-s-s.github.io/JS_Portfolio/">
+    <meta property="og:type" content="website">
 </head>
 <body>
     <header class="header">
