--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@
             <h2 class="section-title">Featured Projects</h2>
             <div class="projects-grid">
                 <div class="project-item">
+                    <img src="projects/Youtube.png" alt="Youtube Interface">
+                    <div class="project-overlay">
+                        <h3>Youtube-Like Interface</h3>
+                        <p>YouTube interface task after HTML and CSS full course</p>
+                        <a href="https://joy-s-s.github.io/YouTube/" class="project-link">View Website</a>
+                    </div>
+                </div>
+                <div class="project-item">
                     <img src="projects/Quran.png" alt="Quran Live Stream">
                     <div class="project-overlay">
                         <h3>Quran Live Stream</h3>
@@ -109,11 +117,11 @@
                     </div>
                 </div>
                 <div class="project-item">
-                    <img src="projects/Youtube.png" alt="Youtube Interface">
+                    <img src="projects/FreeDF.png" alt="Free PDF Edit Website">
                     <div class="project-overlay">
-                        <h3>Youtube-Like Interface</h3>
-                        <p>YouTube interface task after HTML and CSS full course</p>
-                        <a href="https://joy-s-s.github.io/YouTube/" class="project-link">View Website</a>
+                        <h3>FreeDF</h3>
+                        <p>Merge,split,and edit PDF files directly in your browser. 100% client-side with no file uploads.</p>
+                        <a href="https://joy-s-s.github.io/FreeDF/" class="project-link">View Website</a>
                     </div>
                 </div>
             </div>
