--- a/index.html
+++ b/index.html
@@ -189,6 +189,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="static/JS/script.js"></script>
 </body>
 </html>
